# sparkstral

./: .env.example  .gitignore  Makefile  README.md  compose.yaml
backend/: Dockerfile  conftest.py  pyproject.toml
backend/src/: main.py
backend/src/activities/: company_description.py
backend/src/api/: company.py  message.py  mistral_workflows.py  web_search_cache.py
backend/src/core/: config.py
backend/src/db/: __init__.py  engine.py  models.py
backend/src/schemas/: company.py  message.py  web_search_cache.py
backend/src/workflow/: activities.py  company.py  schemas.py  utils.py  worker.py
backend/src/workflows/: company.py
backend/tests/: test_health.py  test_message.py  test_web_search_cache.py
examples/: banque_postale.md  (+6 more)
workflow_worker/: Dockerfile  pyproject.toml
workflow_worker/src/: activities.py  config.py  pipeline.py  prompts.py  schemas.py  utils.py  worker.py
workflow_worker/src/agents/: base.py  company_profiler.py  company_resolver.py  deduper.py  fact_checker.py  final_reporter.py  genai_use_cases.py  grader.py  ideation.py  markdown_reporter.py  narrative_fact_checker.py  opportunity_mapper.py  pain_point_profiler.py  red_team.py  refiner.py  use_case_deduplicator.py  web_search.py
workflow_worker/src/core/: __init__.py  config.py  schemas.py
workflow_worker/tests/: conftest.py  factories.py  test_cached_web_search.py  test_evidence_brief.py  test_fact_check.py  test_grader.py  test_llm.py  test_pipeline.py  test_prompts.py  test_provider_web_search.py  test_report_builder.py  test_selection.py  test_utils.py  test_worker.py
(+46 files in other folders)
