[project]
name = "backend"
version = "0.1.0"
description = "Sparkstral backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "pydantic-settings>=2.14.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
